--- a/src/main/resources/templates/sede/sedeShow.html
+++ b/src/main/resources/templates/sede/sedeShow.html
@@ -6,7 +6,8 @@
 
 </head>
 <body>
-	<div layout:fragment="content">
+	<!-- coincide settato a false perchè non importante -->
+	<div layout:fragment="content" th:with="coincide=false">
 		<div class="row">
 			<div class="col-xs-12">
 				<div class="x_panel">
@@ -18,7 +19,7 @@
 						<div class="clearfix"></div>
 					</div>
 
-					<th:block th:include="sede/sedeFragment :: sede(true)"></th:block>
+					<th:block th:include="sede/sedeFragment :: sede(false)"></th:block>
 
 				</div>
 			</div>
