--- a/src/main/resources/templates/accreditamento/accreditamentoAllegatiShow.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoAllegatiShow.html
@@ -12,7 +12,7 @@
 					<div class="x_title">
 						<h2 th:text="#{label.allegati}">allegati</h2>
 						<div class="pull-right buttons-header">
-							<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${accreditamentoAllegatiWrapper.accreditamentoId}|}"></a>
+							<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${accreditamentoAllegatiWrapper.accreditamentoId}/show|}"></a>
 						</div>
 						<div class="clearfix"></div>
 					</div>
