--- a/src/main/resources/templates/provider/providerEdit.html
+++ b/src/main/resources/templates/provider/providerEdit.html
@@ -15,7 +15,7 @@
 							<th:block th:unless="${#lists.isEmpty(providerWrapper.idEditabili)}">
 								<button class="btn btn-success pull-right" th:text="#{label.salva}" form="formProvider" type="submit"></button>
 							</th:block>
-							<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${accreditamentoId}|}"></a>
+							<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${accreditamentoId}/edit|}"></a>
 						</div>
 						<div class="clearfix"></div>
 					</div>
@@ -26,192 +26,5 @@
 			</div>
 		</div>
 	</div>
-
-<!-- 					<div class="x_content"> -->
-<!-- 						<form id="formInfo" class="form-horizontal form-label-left" th:action="@{|/accreditamento/${accreditamentoId}/provider/save|}" -->
-<!-- 								method="post" enctype="multipart/form-data" novalidate="novalidate"> -->
-
-<!-- 							<input type="hidden" name="editId" th:value="${providerWrapper.provider.id}" /> -->
-<!-- 							<input type="hidden" th:field="${providerWrapper.accreditamentoId}" /> -->
-<!-- 							<input type="hidden" th:field="${providerWrapper.idEditabili}" /> -->
-<!-- 							<input type="hidden" th:field="${providerWrapper.idOffset}" /> -->
-
-
-
-<!-- 							tipo organizzatore -->
-<!-- 							<div class="item form-group" th:classappend="${#fields.hasErrors('providerWrapper.provider.tipoOrganizzatore')} ? 'bad'"> -->
-<!-- 			                    <label class="control-label col-xs-1" th:text="${++counter}">1</label> -->
-<!-- 			                    <label class="control-label col-md-3 col-sm-3 col-xs-11" for="tipoOrganizzatore"> -->
-<!-- 			                      	<span th:text="#{label.tipo_organizzatore}">label.tipo_organizzatore</span> -->
-<!-- 			                      	<span class="required">*</span> -->
-<!-- 			                    </label> -->
-<!-- 			                    <th:block th:if="${#lists.contains(providerWrapper.idEditabili, counter)}"> -->
-<!-- 			                      	<div class="col-md-4 col-sm-4 col-xs-12"> -->
-<!-- 				                        <select id="tipoOrganizzatore" class="form-control required" th:field="${providerWrapper.provider.tipoOrganizzatore}"> -->
-<!-- 				                          <option value="" th:text="#{label.seleziona}">label.seleziona</option> -->
-<!-- 				                          <option th:each="tipo : ${tipoOrganizzatoreList}" th:value="${tipo}" th:text="${tipo.nome}">Choose option</option> -->
-<!-- 				                        </select> -->
-<!-- 				                    </div> -->
-<!-- 				                </th:block> -->
-<!-- 				             	<th:block th:unless="${#lists.contains(providerWrapper.idEditabili, counter)}"> -->
-<!-- 									<div class="col-md-4 col-sm-4 col-xs-12"> -->
-<!-- 										<label id="tipoOrganizzatore_disabled" class="form-control form-disabled-text left-align col-md-7 col-xs-12" -->
-<!-- 											th:text="${providerWrapper.provider.tipoOrganizzatore}"></label> -->
-<!-- 									</div> -->
-<!-- 								</th:block> -->
-<!-- 			                    <div th:if="${#fields.hasErrors('providerWrapper.provider.tipoOrganizzatore')}" class="alert" th:errors="${providerWrapper.provider.tipoOrganizzatore}"></div> -->
-<!-- 		                    </div> -->
-
-<!-- 		                    denominazione legale -->
-<!-- 							<div class="item form-group" th:classappend="${#fields.hasErrors('providerWrapper.provider.denominazioneLegale')} ? 'bad'"> -->
-<!-- 								<label class="control-label col-xs-1" th:text="${++counter}">2</label> -->
-<!-- 								<label class="control-label col-md-3 col-sm-3 col-xs-11" for="denominazioneLegale"> -->
-<!-- 									<span th:text="#{label.denominazione_legale}">label.denominazione_legale</span> -->
-<!-- 									<span class="required">*</span> -->
-<!-- 								</label> -->
-<!-- 								<th:block th:if="${#lists.contains(providerWrapper.idEditabili, counter)}"> -->
-<!-- 									<div class="col-md-4 col-sm-4 col-xs-12"> -->
-<!-- 										<input type="text" id="denominazioneLegale" required="required" class="form-control col-md-7 col-xs-12" -->
-<!-- 											name="denominazioneLegale" th:field="${providerWrapper.provider.denominazioneLegale}"/> -->
-<!-- 									</div> -->
-<!-- 								</th:block> -->
-<!-- 								<th:block th:unless="${#lists.contains(providerWrapper.idEditabili, counter)}"> -->
-<!-- 									<div class="col-md-4 col-sm-4 col-xs-12"> -->
-<!-- 										<label id="denominzioneLegale_disabled" class="form-control form-disabled-text left-align col-md-7 col-xs-12" -->
-<!-- 											th:text="${providerWrapper.provider.denominazioneLegale}"></label> -->
-<!-- 									</div> -->
-<!-- 								</th:block> -->
-<!-- 								<div th:if="${#fields.hasErrors('providerWrapper.provider.denominazioneLegale')}" class="alert" th:errors="${providerWrapper.provider.denominazioneLegale}"></div> -->
-<!-- 							</div> -->
-
-<!-- 							partita iva -->
-<!-- 							<div class="item form-group" th:classappend="${#fields.hasErrors('providerWrapper.provider.partitaIva')} ? 'bad'"> -->
-<!-- 								<label class="control-label col-xs-1" th:text="${++counter}">3</label> -->
-<!-- 								<label class="control-label col-md-3 col-sm-3 col-xs-11" for="partitaIva"> -->
-<!-- 									<span th:text="#{label.partita_iva}">label.partita_iva</span> -->
-<!-- 									<span class="required">*</span> -->
-<!-- 								</label> -->
-<!-- 								<th:block th:if="${#lists.contains(providerWrapper.idEditabili, counter)}"> -->
-<!-- 									<div class="col-md-4 col-sm-4 col-xs-12"> -->
-<!-- 										<input type="text" id="partitaIva" required="required" class="form-control col-md-7 col-xs-12" -->
-<!-- 											name="partivaIva" th:field="${providerWrapper.provider.partitaIva}"/> -->
-<!-- 									</div> -->
-<!-- 								</th:block> -->
-<!-- 								<th:block th:unless="${#lists.contains(providerWrapper.idEditabili, counter)}"> -->
-<!-- 									<div class="col-md-4 col-sm-4 col-xs-12"> -->
-<!-- 										<label id="partitaIva_disabled" class="form-control form-disabled-text left-align col-md-7 col-xs-12" -->
-<!-- 											th:text="${providerWrapper.provider.partitaIva}"></label> -->
-<!-- 									</div> -->
-<!-- 								</th:block> -->
-<!-- 								<div th:if="${#fields.hasErrors('providerWrapper.provider.partitaIva')}" class="alert" th:errors="${providerWrapper.provider.partitaIva}"></div> -->
-<!-- 							</div> -->
-
-<!-- 							codice fiscale -->
-<!-- 							<div class="item form-group" th:classappend="${#fields.hasErrors('providerWrapper.provider.codiceFiscale')} ? 'bad'"> -->
-<!-- 								<label class="control-label col-xs-1" th:text="${++counter}">4</label> -->
-<!-- 								<label class="control-label col-md-3 col-sm-3 col-xs-11" for="codiceFiscale"> -->
-<!-- 									<span th:text="#{label.codice_fiscale}">label.codice_fiscale</span> -->
-<!-- 									<span class="required">*</span> -->
-<!-- 								</label> -->
-<!-- 								<th:block th:if="${#lists.contains(providerWrapper.idEditabili, counter)}"> -->
-<!-- 									<div class="col-md-4 col-sm-4 col-xs-12"> -->
-<!-- 										<input type="text" id="codiceFiscale" required="required" class="form-control col-md-7 col-xs-12" -->
-<!-- 											name="codiceFiscale" th:field="${providerWrapper.provider.codiceFiscale}"/> -->
-<!-- 									</div> -->
-<!-- 								</th:block> -->
-<!-- 								<th:block th:unless="${#lists.contains(providerWrapper.idEditabili, counter)}"> -->
-<!-- 									<div class="col-md-4 col-sm-4 col-xs-12"> -->
-<!-- 										<label id="codiceFiscale_disabled" class="form-control form-disabled-text left-align col-md-7 col-xs-12" -->
-<!-- 											th:text="${providerWrapper.provider.codiceFiscale}"></label> -->
-<!-- 									</div> -->
-<!-- 								</th:block> -->
-<!-- 								<div th:if="${#fields.hasErrors('providerWrapper.provider.codiceFiscale')}" class="alert" th:errors="${providerWrapper.provider.codiceFiscale}"></div> -->
-<!-- 							</div> -->
-
-<!-- 							ragione sociale -->
-<!-- 							<div class="item form-group" th:classappend="${#fields.hasErrors('providerWrapper.provider.ragioneSociale')} ? 'bad'"> -->
-<!-- 								<label class="control-label col-xs-1" th:text="${++counter}">5</label> -->
-<!-- 								<label class="control-label col-md-3 col-sm-3 col-xs-11" for="ragioneSociale"> -->
-<!-- 									<span th:text="#{label.ragione_sociale}">label.ragione_sociale</span> -->
-<!-- 									<span class="required">*</span> -->
-<!-- 								</label> -->
-<!-- 								<th:block th:if="${#lists.contains(providerWrapper.idEditabili, counter)}"> -->
-<!-- 									<div class="col-md-4 col-sm-4 col-xs-12"> -->
-<!-- 										<select id="ragioneSociale" class="form-control required" th:field="${providerWrapper.provider.ragioneSociale}"> -->
-<!-- 			                          			<option value="" th:text="#{label.seleziona}">label.seleziona</option> -->
-<!-- 			                          			<option th:each="item : ${elencoRagioniSociali}" th:value="${item}" th:text="${item}">Choose option</option> -->
-<!-- 			                        	</select> -->
-<!-- 									</div> -->
-<!-- 								</th:block> -->
-<!-- 								<th:block th:unless="${#lists.contains(providerWrapper.idEditabili, counter)}"> -->
-<!-- 									<div class="col-md-4 col-sm-4 col-xs-12"> -->
-<!-- 										<label id="ragioneSociale_disabled" class="form-control form-disabled-text left-align col-md-7 col-xs-12" -->
-<!-- 											th:text="${providerWrapper.provider.ragioneSociale}"></label> -->
-<!-- 									</div> -->
-<!-- 								</th:block> -->
-<!-- 								<div th:if="${#fields.hasErrors('providerWrapper.provider.ragioneSociale')}" class="alert" th:errors="${providerWrapper.provider.ragioneSociale}"></div> -->
-<!-- 							</div> -->
-
-<!-- 							<div class="divider-dashed"></div> -->
-
-<!-- 							natura organizzazione -->
-<!-- 							<div class="item form-group" th:classappend="${#fields.hasErrors('providerWrapper.provider.naturaOrganizzazione')} ? 'bad'"> -->
-<!-- 								<label class="control-label col-xs-1" th:text="${++counter}">6</label> -->
-<!-- 								<label th:text="#{label.organizzazione_natura}" class="control-label col-md-3 col-sm-3 col-xs-11" for="naturaOrganizzazione">Natura dell'organizzazione</label> -->
-<!-- 									<th:block th:if="${#lists.contains(providerWrapper.idEditabili, counter)}"> -->
-<!-- 										<div class="col-md-4 col-sm-4 col-xs-12" id="naturaOrganizzazione"> -->
-<!-- 											<div class="radio"> -->
-<!-- 												<label> -->
-<!-- 													<input type="radio" class="flat" name="naturaOrg" th:field="${providerWrapper.provider.naturaOrganizzazione}" th:value="Pubblica" /> -->
-<!-- 													<span th:text="#{label.pubblica}">Pubblica</span> -->
-<!-- 												</label> -->
-<!-- 											</div> -->
-<!-- 											<div class="radio"> -->
-<!-- 												<label> -->
-<!-- 													<input type="radio" class="flat" name="naturaOrg" th:field="${providerWrapper.provider.naturaOrganizzazione}" th:value="Privata" /> -->
-<!-- 													<span th:text="#{label.privata}">Privata</span> -->
-<!-- 												</label> -->
-<!-- 											</div> -->
-<!-- 										</div> -->
-<!-- 									</th:block> -->
-<!-- 									<th:block th:unless="${#lists.contains(providerWrapper.idEditabili, counter)}"> -->
-<!-- 										<div class="col-md-4 col-sm-4 col-xs-12"> -->
-<!-- 											<label id="naturaOrganizzazione_disabled" class="form-control form-disabled-text left-align col-md-7 col-xs-12" -->
-<!-- 												th:text="${providerWrapper.provider.naturaOrganizzazione}"></label> -->
-<!-- 										</div> -->
-<!-- 									</th:block> -->
-<!-- 								<div th:if="${#fields.hasErrors('providerWrapper.provider.naturaOrganizzazione')}" class="alert" th:errors="${providerWrapper.provider.naturaOrganizzazione}"></div> -->
-<!-- 							</div> -->
-
-<!-- 							<div class="divider-dashed"></div> -->
-
-<!-- 							no profit -->
-<!-- 							<div class="item form-group" th:classappend="${#fields.hasErrors('providerWrapper.provider.noProfit')} ? 'bad'"> -->
-<!-- 								<label class="control-label col-xs-1" th:text="${++counter}">7</label> -->
-<!-- 								<label th:text="#{label.no_profit}" class="control-label col-md-3 col-sm-3 col-xs-11" for="noProfit">Natura dell'organizzazione</label> -->
-<!-- 									<th:block th:if="${#lists.contains(providerWrapper.idEditabili, counter)}"> -->
-<!-- 										<div class="col-md-4 col-sm-4 col-xs-12" id="noProfit"> -->
-<!-- 											<div class="radio"> -->
-<!-- 												<label> -->
-<!-- 													<input type="radio" class="flat" name="societaNoProfit" th:field="${providerWrapper.provider.noProfit}" th:value="true" /> -->
-<!-- 													<span th:text="#{label.sì}">Sì</span> -->
-<!-- 												</label> -->
-<!-- 											</div> -->
-<!-- 											<div class="radio"> -->
-<!-- 												<label> -->
-<!-- 													<input type="radio" class="flat" name="societaNoProfit" th:field="${providerWrapper.provider.noProfit}" th:value="false" /> -->
-<!-- 													<span th:text="#{label.no}">No</span> -->
-<!-- 												</label> -->
-<!-- 											</div> -->
-<!-- 										</div> -->
-<!-- 									</th:block> -->
-<!-- 									<th:block th:unless="${#lists.contains(providerWrapper.idEditabili, counter)}"> -->
-<!-- 										<div class="col-md-4 col-sm-4 col-xs-12"> -->
-<!-- 											<label id="noProfit_disabled" class="form-control form-disabled-text left-align col-md-7 col-xs-12" -->
-<!-- 												th:text="${providerWrapper.provider.noProfit}"></label> -->
-<!-- 										</div> -->
-<!-- 									</th:block> -->
-<!-- 								<div th:if="${#fields.hasErrors('providerWrapper.provider.noProfit')}" class="alert" th:errors="${providerWrapper.provider.noProfit}"></div> -->
-<!-- 							</div> -->
 </body>
 </html>
