rimossa stringa di commento inutile

--- a/src/main/resources/templates/evento/pianoFormativoEdit.html
+++ b/src/main/resources/templates/evento/pianoFormativoEdit.html
@@ -5,7 +5,7 @@
 <head lang="it">
 </head>
 <body>
-	<div layout:fragment="content">                 <!-- TODO: rimuovere ? dal wrapper, collegare i wrapper/thymeleaf giusti, sistemare gli url dei servizi -->
+	<div layout:fragment="content">
 		<div class="row">
 			<div class="col-xs-12">
 				<div class="x_panel">
