--- a/src/main/resources/templates/persona/personaShow.html
+++ b/src/main/resources/templates/persona/personaShow.html
@@ -12,7 +12,7 @@
 					<div class="x_title">
 						<h2 th:text="#{label.dati_del} + ' ' + ${personaWrapper.persona.ruolo.nome}">Dati del persona.ruolo</h2>
 						<div class="pull-right buttons-header">
-							<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${personaWrapper.accreditamentoId}|}"></a>
+							<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${personaWrapper.accreditamentoId}/show|}"></a>
 						</div>
 						<div class="clearfix"></div>
 					</div>
