--- a/src/main/resources/templates/evento/eventoEdit.html
+++ b/src/main/resources/templates/evento/eventoEdit.html
@@ -15,7 +15,8 @@
 							<th:block th:unless="${#lists.isEmpty(eventoWrapper.idEditabili)}">
 								<button class="btn btn-success pull-right" th:text="#{label.salva}" form="formEvento" type="submit"></button>
 							</th:block>
-							<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${eventoWrapper.accreditamentoId}/|}"></a>
+							<a th:if="${eventoWrapper.accreditamentoId != null}" class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${eventoWrapper.accreditamentoId}/edit|}"></a>
+							<a th:if="${eventoWrapper.accreditamentoId == null}" class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/provider/${eventoWrapper.providerId}/evento/list|}"></a>
 						</div>
 						<div class="clearfix"></div>
 					</div>
