--- a/src/main/resources/templates/accreditamento/accreditamentoFragment.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoFragment.html
@@ -78,7 +78,8 @@
 															<span class="fa fa-remove red" th:title="#{label.non_inserito}"></span>
 														</td>
 													</th:block>
-													<td th:unless="${editabile}"><a th:text="#{label.sede_legale}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/sede/${accreditamentoWrapper.sedeLegale.id}/show?tipologiaSede=SedeLegale|}"></a></td>
+													<td th:unless="${editabile or accreditamentoWrapper.sedeLegale.new}"><a th:text="#{label.sede_legale}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/sede/${accreditamentoWrapper.sedeLegale.id}/show?tipologiaSede=SedeLegale|}"></a></td>
+													<td th:if="${!editabile and accreditamentoWrapper.sedeLegale.new}"><span th:text="#{label.sede_legale} + ' ' + #{label.da_inserire}"></span></td>
 												</tr>
 												<!-- SEDE OPERATIVA -->
 												<tr>
@@ -92,7 +93,8 @@
 															<span class="fa fa-remove red" th:title="#{label.non_inserito}"></span>
 														</td>
 													</th:block>
-													<td th:unless="${editabile}"><a th:text="#{label.sede_operativa}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/sede/${accreditamentoWrapper.provider.sedeOperativa.id}/show?tipologiaSede=SedeOperativa|}"></a></td>
+													<td th:unless="${editabile or accreditamentoWrapper.sedeOperativa.new}"><a th:text="#{label.sede_operativa}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/sede/${accreditamentoWrapper.provider.sedeOperativa.id}/show?tipologiaSede=SedeOperativa|}"></a></td>
+													<td th:if="${!editabile and accreditamentoWrapper.sedeOperativa.new}"><span th:text="#{label.sede_operativa} + ' ' + #{label.da_inserire}"></span></td>
 												</tr>
 												<!-- LEGALE RAPPRESENTANTE -->
 												<tr>
@@ -107,10 +109,11 @@
 															<span class="fa fa-check green" th:title="#{label.ok}"></span>
 														</td>
 													</th:block>
-													<td th:unless="${editabile}"><a th:text="#{label.legale_rappresentante}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.legaleRappresentante.id}/show|}"></a></td>
+													<td th:unless="${editabile or (accreditamentoWrapper.legaleRappresentante == null)}"><a th:text="#{label.legale_rappresentante}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.legaleRappresentante.id}/show|}"></a></td>
+													<td th:if="${!editabile and (accreditamentoWrapper.legaleRappresentante == null)}"><span th:text="#{label.legale_rappresentante} + ' ' + #{label.da_inserire}"></span></td>
 												</tr>
 												<!-- DELEGATO LEGALE RAPPRESENTANTE -->
-												<tr th:if="${accreditamentoWrapper.provider.tipoOrganizzatore.tipoP and !(!editabile and (accreditamentoWrapper.delegatoLegaleRappresentante == null))}">
+												<tr th:if="${accreditamentoWrapper.provider.tipoOrganizzatore.tipoP}">
 													<th:block th:if="${editabile}">
 														<td th:if="${accreditamentoWrapper.delegatoLegaleRappresentante != null}"><a th:text="#{label.delegato_legale_rappresentante}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.delegatoLegaleRappresentante.id}/edit|}"></a></td>
 														<td th:if="${accreditamentoWrapper.delegatoLegaleRappresentante == null}"><a th:text="#{label.delegato_legale_rappresentante}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/new?ruolo=DELEGATO_LEGALE_RAPPRESENTANTE|}"></a></td>
@@ -122,7 +125,8 @@
 															<span class="fa fa-check green" th:title="#{label.ok}"></span>
 														</td>
 													</th:block>
-													<td th:unless="${editabile}"><a th:text="#{label.delegato_legale_rappresentante}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.delegatoLegaleRappresentante.id}/show|}"></a></td>
+													<td th:unless="${editabile or (accreditamentoWrapper.delegatoLegaleRappresentante == null)}"><a th:text="#{label.delegato_legale_rappresentante}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.delegatoLegaleRappresentante.id}/show|}"></a></td>
+													<td th:if="${!editabile and (accreditamentoWrapper.delegatoLegaleRappresentante == null)}"><span th:text="#{label.delegato_legale_rappresentante} + ' ' + #{label.da_inserire}"></span></td>
 												</tr>
 											</tbody>
 										</table>
@@ -160,7 +164,8 @@
 															<span class="fa fa-remove red" th:title="#{label.non_inserito}"></span>
 														</td>
 													</th:block>
-													<td th:unless="${editabile}"><a th:text="#{label.dati_accreditamento}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/dati/${accreditamentoWrapper.datiAccreditamento.id}/show|}"></a></td>
+													<td th:unless="${editabile or accreditamentoWrapper.datiAccreditamento.new}"><a th:text="#{label.dati_accreditamento}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/dati/${accreditamentoWrapper.datiAccreditamento.id}/show|}"></a></td>
+													<td th:if="${!editabile and accreditamentoWrapper.datiAccreditamento.new}"><span th:text="#{label.dati_accreditamento} + ' ' + #{label.da_inserire}"></span></td>
 												</tr>
 											</tbody>
 										</table>
@@ -202,7 +207,8 @@
 															<span class="fa fa-remove red" th:title="#{label.non_inserito}"></span>
 														</td>
 													</th:block>
-													<td th:unless="${editabile}"><a th:text="#{label.responsabile_segreteria}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.responsabileSegreteria.id}/show|}"></a></td>
+													<td th:unless="${editabile or accreditamentoWrapper.responsabileSegreteria == null}"><a th:text="#{label.responsabile_segreteria}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.responsabileSegreteria.id}/show|}"></a></td>
+													<td th:if="${!editabile and (accreditamentoWrapper.responsabileSegreteria == null)}"><span th:text="#{label.responsabile_segreteria} + ' ' + #{label.da_inserire}"></span></td>
 												</tr>
 												<!-- RESPONSABILE AMMINISTRATIVO -->
 												<tr>
@@ -216,7 +222,8 @@
 															<span class="fa fa-remove red" th:title="#{label.non_inserito}"></span>
 														</td>
 													</th:block>
-													<td th:unless="${editabile}"><a th:text="#{label.responsabile_amministrativo}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.responsabileAmministrativo.id}/show|}"></a></td>
+													<td th:unless="${editabile or accreditamentoWrapper.responsabileAmministrativo == null}"><a th:text="#{label.responsabile_amministrativo}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.responsabileAmministrativo.id}/show|}"></a></td>
+													<td th:if="${!editabile and (accreditamentoWrapper.responsabileAmministrativo == null)}"><span th:text="#{label.responsabile_amministrativo} + ' ' + #{label.da_inserire}"></span></td>
 												</tr>
 												<!--  RESPONSABILE SISTEMA INFORMATICO -->
 												<tr>
@@ -230,7 +237,8 @@
 															<span class="fa fa-remove red" th:title="#{label.non_inserito}"></span>
 														</td>
 													</th:block>
-													<td th:unless="${editabile}"><a th:text="#{label.responsabile_sistema_informatico}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.responsabileSistemaInformatico.id}/show|}"></a></td>
+													<td th:unless="${editabile or accreditamentoWrapper.responsabileSistemaInformatico == null}"><a th:text="#{label.responsabile_sistema_informatico}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.responsabileSistemaInformatico.id}/show|}"></a></td>
+													<td th:if="${!editabile and (accreditamentoWrapper.responsabileSistemaInformatico == null)}"><span th:text="#{label.responsabile_sistema_informatico} + ' ' + #{label.da_inserire}"></span></td>
 												</tr>
 												<!-- RESPONSABILE QUALITÀ -->
 												<tr>
@@ -244,7 +252,8 @@
 															<span class="fa fa-remove red" th:title="#{label.non_inserito}"></span>
 														</td>
 													</th:block>
-													<td th:unless="${editabile}"><a th:text="#{label.responsabile_qualita}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.responsabileQualita.id}/show|}"></a></td>
+													<td th:unless="${editabile or accreditamentoWrapper.responsabileQualita == null}"><a th:text="#{label.responsabile_qualita}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.responsabileQualita.id}/show|}"></a></td>
+													<td th:if="${!editabile and (accreditamentoWrapper.responsabileQualita == null)}"><span th:text="#{label.responsabile_qualita} + ' ' + #{label.da_inserire}"></span></td>
 												</tr>
 											</tbody>
 										</table>
@@ -261,7 +270,8 @@
 									</div>
 									<div class="x_content">
 										<div th:unless="${accreditamentoWrapper.comitatoScientificoStato or !editabile}" th:text="#{${accreditamentoWrapper.comitatoScientificoErrorMessage}}" class="alert alert-error"></div>
-										<table id="comitato-table" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%"  th:classappend="${editabile ? 'datatable-responsive-componentiComitato-edit' : 'datatable-responsive-componentiComitato-show'}">
+										<div th:if="${#lists.isEmpty(accreditamentoWrapper.componentiComitatoScientifico)}" th:text="#{label.nessun_componente_comitato}"></div>
+										<table th:unless="${#lists.isEmpty(accreditamentoWrapper.componentiComitatoScientifico)}" id="comitato-table" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%"  th:classappend="${editabile ? 'datatable-responsive-componentiComitato-edit' : 'datatable-responsive-componentiComitato-show'}">
 											<thead>
 												<tr>
 													<th th:text="#{label.componenti_comitato_scientifico}">Componenti Comitato Scientifico</th>
