--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -303,6 +303,10 @@ textarea {
 	width: 100%;
 }
 
+.note-text {
+	width: 300px;
+}
+
 .dropdown-header.optgroup-primary {
 	background-color: #337ab7;
 }
