Tolto il display: none per i radio nelle tab responsive
altrimenti non è possibile vedere il radio nemmeno senza lo stile iCheck

--- a/src/main/resources/templates/segreteria/valutazione.html
+++ b/src/main/resources/templates/segreteria/valutazione.html
@@ -205,14 +205,14 @@
 										<td class="tdRadioValutazione">
 											<span class="radio radioValutazione">
 												<label class="labelRadioValutazione">
-													<input type="radio" class="flat"
+													<input type="radio" class="flat table-radio"
 														id="valutazioneSi" name="valutazioneValue" th:value="Sì" />
 														<span class="textRadioValutazione" th:text="#{label.sì}" style="display: inline-block">Sì</span>
 												</label>
 											</span>
 											<span class="radio radioValutazione">
 												<label class="labelRadioValutazione">
-													<input type="radio" class="flat"
+													<input type="radio" class="flat table-radio"
 														id="valutazioneNo" name="valutazioneValue" th:value="No" />
 													<span class="textRadioValutazione" th:text="#{label.no}" style="display: inline-block">No</span>
 												</label>
@@ -228,14 +228,14 @@
 										<td class="tdRadioValutazione">
 											<span class="radio radioValutazione">
 												<label class="labelRadioValutazione">
-													<input type="radio" class="flat"
+													<input type="radio" class="flat table-radio"
 														id="valutazioneSi" name="valutazioneValue1" th:value="Sì" />
 														<span class="textRadioValutazione" th:text="#{label.sì}" style="display: inline-block">Sì</span>
 												</label>
 											</span>
 											<span class="radio radioValutazione">
 												<label class="labelRadioValutazione">
-													<input type="radio" class="flat"
+													<input type="radio" class="flat table-radio"
 														id="valutazioneNo" name="valutazioneValue1" th:value="No" />
 													<span class="textRadioValutazione" th:text="#{label.no}" style="display: inline-block">No</span>
 												</label>
@@ -250,14 +250,14 @@
 										<td class="tdRadioValutazione">
 											<span class="radio radioValutazione">
 												<label class="labelRadioValutazione">
-													<input type="radio" class="flat"
+													<input type="radio" class="flat table-radio"
 														id="valutazioneSi" name="valutazioneValue2" th:value="Sì" />
 														<span class="textRadioValutazione" th:text="#{label.sì}" style="display: inline-block">Sì</span>
 												</label>
 											</span>
 											<span class="radio radioValutazione">
 												<label class="labelRadioValutazione">
-													<input type="radio" class="flat"
+													<input type="radio" class="flat table-radio"
 														id="valutazioneNo" name="valutazioneValue2" th:value="No" />
 													<span class="textRadioValutazione" th:text="#{label.no}" style="display: inline-block">No</span>
 												</label>
@@ -272,14 +272,14 @@
 										<td class="tdRadioValutazione">
 											<span class="radio radioValutazione">
 												<label class="labelRadioValutazione">
-													<input type="radio" class="flat"
+													<input type="radio" class="flat table-radio"
 														id="valutazioneSi" name="valutazioneValue3" th:value="Sì" />
 														<span class="textRadioValutazione" th:text="#{label.sì}" style="display: inline-block">Sì</span>
 												</label>
 											</span>
 											<span class="radio radioValutazione">
 												<label class="labelRadioValutazione">
-													<input type="radio" class="flat"
+													<input type="radio" class="flat table-radio"
 														id="valutazioneNo" name="valutazioneValue3" th:value="No" />
 													<span class="textRadioValutazione" th:text="#{label.no}" style="display: inline-block">No</span>
 												</label>
@@ -294,14 +294,14 @@
 										<td class="tdRadioValutazione">
 											<span class="radio radioValutazione">
 												<label class="labelRadioValutazione">
-													<input type="radio" class="flat"
+													<input type="radio" class="flat table-radio"
 														id="valutazioneSi" name="valutazioneValue4" th:value="Sì" />
 														<span class="textRadioValutazione" th:text="#{label.sì}" style="display: inline-block">Sì</span>
 												</label>
 											</span>
 											<span class="radio radioValutazione">
 												<label class="labelRadioValutazione">
-													<input type="radio" class="flat"
+													<input type="radio" class="flat table-radio"
 														id="valutazioneNo" name="valutazioneValue4" th:value="No" />
 													<span class="textRadioValutazione" th:text="#{label.no}" style="display: inline-block">No</span>
 												</label>
