--- a/src/main/resources/templates/persona/personaList.html
+++ b/src/main/resources/templates/persona/personaList.html
@@ -24,7 +24,7 @@
 							<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 profile_details" th:each="persona, row : ${personaList}">
 								<div class="well profile_view">
 									<div class="col-xs-12 profile_anagrafica">
-										<h4 class="brief italic" th:text="${persona.ruolo.nome}">Ruolo</h4>
+										<h4 class="brief italic" th:text="${persona.isCoordinatoreComitatoScientifico() ? #messages.msg('label.coordinatore_comitato_scientifico') : persona.ruolo.nome}">Ruolo</h4>
 										<div class="left col-xs-7">
 											<h2 th:text="${persona.anagrafica.nome + ' ' + persona.anagrafica.cognome}">Nome Cognome</h2>
 											<ul class="list-unstyled">
